--- a/plugin.yml
+++ b/plugin.yml
@@ -3,20 +3,18 @@ description: Easy to use plugin that changes your gamemode
 website: https://www.github.com/ErosionYT
 main: ErosionYT\EasyGM\Main
 author: ErosionYT
-version: 2.0.0
+version: 2.0.1
 api: 4.0.0
 
 permissions:
   easygamemode.command.gmc:
     default: op
-    description: Change your gamemode to creative
   easygamemode.command.gms:
     default: op
-    description: Change your gamemode to survival
   easygamemode.command.gmspc:
     default: op
-    description: Change your gamemode to spectator
   easygamemode.command.gma:
     default: op
-    description: Change your gamemode to Adventure
+  easygamemode.command.ui:
+    default: op
 
